--- a/Viaxar/app/src/main/res/layout/content_main.xml
+++ b/Viaxar/app/src/main/res/layout/content_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_app">
+    tools:showIn="@layout/activity_app"
+    tools:context=".MenuActivity">
 
         <fragment
             android:id="@+id/nav_host_fragment"
