--- a/Viaxar/app/src/main/res/layout/activity_paises.xml
+++ b/Viaxar/app/src/main/res/layout/activity_paises.xml
@@ -61,16 +61,10 @@
             android:layout_height="match_parent"
             android:layout_row="0"
             android:layout_column="0">
-            <GridLayout
+
+            <ListView
                 android:id="@+id/listaPaises"
-                android:layout_width="409dp"
-                android:layout_height="597dp"
-                android:layout_marginTop="61dp"
-                android:columnCount="2"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-    </ScrollView>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
