--- a/Viaxar/app/src/main/res/layout/cidade_home.xml
+++ b/Viaxar/app/src/main/res/layout/cidade_home.xml
@@ -35,7 +35,7 @@
             android:paddingLeft="12dp">
 
             <TextView
-                android:id="@+id/tvPais"
+                android:id="@+id/tvNome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pais"
