--- a/Viaxar/app/src/main/res/layout/pais_fav.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav.xml
@@ -5,14 +5,16 @@
     android:id="@+id/linearhorizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="#212121">
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginVertical="10dp"
+    android:background="#212121"
+    android:orientation="horizontal">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="10dp"
+        android:layout_height="wrap_content"
         android:elevation="2dp"
+        app:cardCornerRadius="15dp"
         app:contentPadding="5dp">
 
         <LinearLayout
@@ -22,75 +24,74 @@
 
             <ImageView
                 android:id="@+id/imgPais"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="83dp"
+                android:layout_height="87dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:paddingHorizontal="5dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
-    <LinearLayout
-        android:id="@+id/linear"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:paddingLeft="12dp">
+            <LinearLayout
+                android:id="@+id/linear"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="12dp">
 
-        <TextView
-            android:id="@+id/tvPais"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pais"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
+                <TextView
+                    android:id="@+id/tvNome"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Pais"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/tvContinente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/tvContinente"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
 
-            android:text="Continente"
-            android:textSize="20dp" />
+                    android:text="Continente"
+                    android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/tvLingua"
-            android:layout_width="181dp"
-            android:layout_height="wrap_content"
-            android:text="Lingua"
-            android:textSize="20dp"
-            android:visibility="visible" />
+                <TextView
+                    android:id="@+id/tvLingua"
+                    android:layout_width="181dp"
+                    android:layout_height="wrap_content"
+                    android:text="Lingua"
+                    android:textSize="16sp"
+                    android:visibility="visible" />
 
 
-    </LinearLayout>
+            </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/direita"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/direita"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imgCoracaoVermelho"
-            android:layout_width="wrap_content"
-            android:layout_gravity="right"
-            android:paddingTop="6dp"
-            android:paddingRight="6dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_menu_favorite"
-            app:tint="@android:color/holo_red_light"
-            />
+                <ImageView
+                    android:id="@+id/imgCoracaoVermelho"
+                    android:layout_width="45dp"
+                    android:layout_height="42dp"
+                    android:layout_gravity="right"
+                    android:layout_weight="1"
+                    android:paddingTop="6dp"
+                    android:paddingRight="6dp"
+                    app:srcCompat="@drawable/ic_menu_favorite"
+                    app:tint="@android:color/holo_red_light" />
 
-        <ImageView
-            android:id="@+id/imgBandeira"
-            android:layout_width="87dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:srcCompat="@tools:sample/avatars" />
+                <ImageView
+                    android:id="@+id/imgBandeira"
+                    android:layout_width="45dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    tools:srcCompat="@tools:sample/avatars" />
 
-    </LinearLayout>
+            </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
