--- a/Viaxar/app/src/main/res/layout/activity_pais.xml
+++ b/Viaxar/app/src/main/res/layout/activity_pais.xml
@@ -49,7 +49,8 @@
 
                 <TextView
                     android:id="@+id/nome_pais"
-                    android:layout_width="186dp"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_height="wrap_content"
                     android:layout_row="0"
                     android:layout_column="1"
