--- a/Viaxar/app/src/main/res/layout/pais_home.xml
+++ b/Viaxar/app/src/main/res/layout/pais_home.xml
@@ -4,75 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearhorizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="190dp"
     android:layout_marginHorizontal="5dp"
     android:layout_marginVertical="10dp"
     android:background="#212121"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:paddingVertical="5dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:elevation="2dp"
-        app:cardCornerRadius="15dp"
-        app:contentPadding="5dp">
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgBack"
-                android:layout_width="83dp"
-                android:layout_height="87dp"
+                android:id="@+id/imgPais"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:paddingHorizontal="5dp"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <LinearLayout
-                android:id="@+id/linear"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingLeft="12dp">
 
-                <TextView
-                    android:id="@+id/tvNome"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Pais"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:visibility="visible" />
+            <RelativeLayout
+                android:id="@+id/relative"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@drawable/pais_home_bg">
 
-                <TextView
-                    android:id="@+id/tvContinente"
-                    android:layout_width="181dp"
-                    android:layout_height="wrap_content"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                    android:text="Continente"
-                    android:textSize="16sp" />
+                    <TextView
+                        android:id="@+id/tvNome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Pais"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:visibility="visible"
+                        android:layout_gravity="center"
+                        android:paddingLeft="10dp"/>
 
+                    <TextView
+                        android:id="@+id/tvContinente"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textColor="@android:color/black"
+                        android:text="Continente"
+                        android:textSize="16sp"
+                        android:paddingLeft="10dp"/>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/direita"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
+                    </LinearLayout>
                 <ImageView
                     android:id="@+id/imgBandeira"
-                    android:layout_width="45dp"
-                    android:layout_height="50dp"
+                    android:layout_width="70dp"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
-                    tools:srcCompat="@tools:sample/avatars" />
-
-            </LinearLayout>
+                    tools:srcCompat="@tools:sample/avatars"
+                    android:layout_alignParentRight="true"/>
+            </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
