--- a/Viaxar/app/src/main/res/layout/fragment_explore.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_explore.xml
@@ -43,31 +43,32 @@
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="30dp">
+        android:layout_margin="10dp">
 
         <TableRow
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:textAlignment="textStart">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
 
-            <FrameLayout>
+            <FrameLayout
+                android:layout_weight="1"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp">
 
                 <ImageButton
                     android:id="@+id/btn_america"
-                    android:layout_width="117dp"
+                    android:layout_width="match_parent"
                     android:layout_height="107dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:background="@drawable/button_explore"
                     android:paddingTop="20dp"
                     android:paddingBottom="8dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/america"
-                    android:text="Button" />
+                    android:text="Button"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -76,23 +77,25 @@
                     android:clickable="false"
                     android:text="America"
                     android:textColor="#000000"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
             </FrameLayout>
 
-            <FrameLayout>
+            <FrameLayout
+                android:layout_weight="1"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp">
 
                 <ImageButton
                     android:id="@+id/btn_europa"
-                    android:layout_width="117dp"
+                    android:layout_width="match_parent"
                     android:layout_height="104dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:background="@drawable/button_explore"
                     android:paddingTop="20dp"
                     android:paddingBottom="8dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/europe"
-                    android:text="Button" />
+                    android:text="Button"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -101,30 +104,29 @@
                     android:clickable="false"
                     android:text="Europa"
                     android:textColor="#000000"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
             </FrameLayout>
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginVertical="15dp"
+            android:layout_height="wrap_content"
             android:gravity="center">
 
-            <FrameLayout>
+            <FrameLayout
+                android:layout_weight="1"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp">
 
                 <ImageButton
                     android:id="@+id/btn_africa"
-                    android:layout_width="117dp"
+                    android:layout_width="match_parent"
                     android:layout_height="107dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:background="@drawable/button_explore"
-
                     android:paddingTop="20dp"
                     android:paddingBottom="8dp"
                     android:scaleType="centerInside"
-                    android:src="@drawable/africa"></ImageButton>
+                    android:src="@drawable/africa"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -133,17 +135,18 @@
                     android:clickable="false"
                     android:text="Africa"
                     android:textColor="#000000"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
             </FrameLayout>
 
-            <FrameLayout>
+            <FrameLayout
+                android:layout_weight="1"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp">
 
                 <ImageButton
                     android:id="@+id/btn_asia"
-                    android:layout_width="117dp"
+                    android:layout_width="match_parent"
                     android:layout_height="107dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
                     android:background="@drawable/button_explore"
                     android:paddingTop="20dp"
                     android:paddingBottom="8dp"
@@ -158,21 +161,23 @@
                     android:clickable="false"
                     android:text="Asia"
                     android:textColor="#000000"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
             </FrameLayout>
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_height="wrap_content"
             android:gravity="center">
 
-            <FrameLayout>
+            <FrameLayout
+                android:layout_weight="1"
+                android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="10dp">
 
                 <ImageButton
                     android:id="@+id/btn_oceania"
-                    android:layout_width="117dp"
+                    android:layout_width="175dp"
                     android:layout_height="107dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
@@ -184,7 +189,8 @@
                     android:paddingBottom="8dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/australia"
-                    android:text="Button" />
+                    android:text="Button"
+                    android:layout_gravity="center"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -193,9 +199,8 @@
                     android:clickable="false"
                     android:text="Oceania"
                     android:textColor="#000000"
-                    android:textStyle="bold"></TextView>
+                    android:textStyle="bold"/>
             </FrameLayout>
         </TableRow>
     </TableLayout>
-
 </LinearLayout>
