--- a/Viaxar/app/src/main/res/layout/activity_main.xml
+++ b/Viaxar/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="184dp"
+        android:layout_width="wrap_content"
         android:layout_height="64dp"
         android:fontFamily="@font/bukhariscriptttf"
         android:text="Get started"
@@ -45,7 +45,7 @@
         android:layout_gravity="start"
         android:layout_marginStart="48dp"
         android:layout_marginEnd="48dp"
-        android:layout_marginBottom="152dp"
+        android:layout_marginBottom="172dp"
         android:background="@drawable/button_lg"
         android:backgroundTint="#1EAAF1"
         android:enabled="true"
@@ -53,7 +53,6 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chkTermos"
         app:layout_constraintVertical_bias="0.35" />
