--- a/Viaxar/app/src/main/res/layout/pais_fav.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav.xml
@@ -23,6 +23,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:scaleType="centerCrop"
                 android:id="@+id/imgBack"
                 android:layout_width="83dp"
                 android:layout_height="87dp"
