--- a/Viaxar/app/src/main/res/layout/pais_home.xml
+++ b/Viaxar/app/src/main/res/layout/pais_home.xml
@@ -12,67 +12,65 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="180dp"
         android:elevation="2dp"
-        app:cardCornerRadius="15dp"
-        app:contentPadding="5dp">
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/imgBack"
-                android:layout_width="83dp"
-                android:layout_height="87dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:paddingHorizontal="5dp"
+                android:scaleType="centerCrop"
                 tools:srcCompat="@tools:sample/avatars" />
 
-            <LinearLayout
-                android:id="@+id/linear"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:id="@+id/parentRelative"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:orientation="vertical"
                 android:paddingLeft="12dp">
 
-                <TextView
-                    android:id="@+id/tvNome"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pais"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    android:visibility="visible" />
+                    android:layout_centerVertical="true">
 
-                <TextView
-                    android:id="@+id/tvContinente"
-                    android:layout_width="181dp"
-                    android:layout_height="wrap_content"
+                    <TextView
+                        android:id="@+id/tvNome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Pais"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:gravity="center"
+                        android:visibility="visible"/>
 
-                    android:text="Continente"
-                    android:textSize="16sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/direita"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/tvContinente"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Continente"
+                        android:layout_marginLeft="10dp"
+                        android:gravity="center_vertical"
+                        android:textSize="16sp" />
+                </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imgBandeira"
-                    android:layout_width="45dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
+                    android:layout_width="55dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:scaleType="centerCrop"
                     tools:srcCompat="@tools:sample/avatars" />
-
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
