--- a/Viaxar/app/src/main/res/layout/card_informacoes.xml
+++ b/Viaxar/app/src/main/res/layout/card_informacoes.xml
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvNome"
+            android:id="@+id/tvNomeCidade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2sp"
