--- a/Viaxar/app/src/main/res/layout/fragment_home.xml
+++ b/Viaxar/app/src/main/res/layout/fragment_home.xml
@@ -39,17 +39,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:paddingBottom="80dp"
-            android:paddingHorizontal="20dp">
+            android:paddingHorizontal="20dp"
+            android:paddingBottom="80dp">
 
             <SearchView
-                android:layout_gravity="center"
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
                 android:layout_height="53dp"
+                android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:background="#FFFFFF"
-                android:backgroundTint="#FFFFFF"/>
+                android:backgroundTint="#FFFFFF" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,8 +81,8 @@
                 android:id="@+id/imageView9"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:scaleType="centerCrop"
                 android:layout_marginTop="8dp"
+                android:scaleType="centerCrop"
                 android:src="@drawable/traco"
                 app:tint="@android:color/white" />
 
@@ -91,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:dividerHeight="8dp"
-                android:paddingTop="10dp"/>
+                android:paddingTop="10dp" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
