--- a/Viaxar/app/src/main/res/layout/pais_fav.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav.xml
@@ -41,7 +41,7 @@
                 android:paddingLeft="12dp">
 
                 <TextView
-                    android:id="@+id/tvNome"
+                    android:id="@+id/tvNomeCidade"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Pais"
