--- a/Viaxar/app/src/main/res/layout/pais_traveler.xml
+++ b/Viaxar/app/src/main/res/layout/pais_traveler.xml
@@ -9,7 +9,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/tvNome"
+        android:id="@+id/tvNomeCidade"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Brazil" />
