--- a/Viaxar/app/src/main/res/layout/activity_pais.xml
+++ b/Viaxar/app/src/main/res/layout/activity_pais.xml
@@ -149,8 +149,10 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/imgCidade"
                         android:layout_alignEnd="@id/imgCidade"
-                        android:layout_margin="5sp"
-                        android:text="Estado/Provincia"
+                        android:layout_marginStart="5sp"
+                        android:layout_marginTop="5sp"
+                        android:layout_marginEnd="5sp"
+                        android:layout_marginBottom="5sp"
                         android:textColor="#FFFFFF"
                         android:textStyle="bold" />
 
@@ -219,7 +221,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
                         android:backgroundTint="@color/cinzaToolbar"
-                        android:text="Lingua"
+                        android:text="Language"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -243,7 +245,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
                         android:backgroundTint="@color/cinzaToolbar"
-                        android:text="Moeda"
+                        android:text="Currency"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -267,7 +269,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
                         android:backgroundTint="@color/cinzaToolbar"
-                        android:text="População"
+                        android:text="Population"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -291,7 +293,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
                         android:backgroundTint="@color/cinzaToolbar"
-                        android:text="Clima"
+                        android:text="Climate"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -315,7 +317,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/tableborder"
                         android:backgroundTint="@color/cinzaToolbar"
-                        android:text="Religiao"
+                        android:text="Religion"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textStyle="bold" />
@@ -359,56 +361,101 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10sp"
+                        android:text="City:"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvCidadeNome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="5sp"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/tvPontosTuristicos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Pontos Turisticos"
+                    android:text=" Attractions"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <HorizontalScrollView
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                </HorizontalScrollView>
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ListView
+                            android:id="@+id/lvPontosTuristicos"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </ScrollView>
 
                 <TextView
-                    android:id="@+id/tvArtes"
+                    android:id="@+id/tvRestaurantes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Artes"
+                    android:text="Restaurants"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <HorizontalScrollView
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ListView
+                            android:id="@+id/lvRestaurantes"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </ScrollView>
 
-
-                </HorizontalScrollView>
 
                 <TextView
-                    android:id="@+id/tvCulinaria"
+                    android:id="@+id/tvHoteis"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Culinaria"
+                    android:text="Hotels"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <HorizontalScrollView
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <ListView
+                            android:id="@+id/lvHoteis"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+                    </LinearLayout>
+                </ScrollView>
 
-
-                </HorizontalScrollView>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
