--- a/Viaxar/app/src/main/res/layout/card_atracoes.xml
+++ b/Viaxar/app/src/main/res/layout/card_atracoes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearhorizontal"
@@ -8,40 +8,44 @@
     android:background="#212121"
     android:elevation="2dp"
     android:orientation="horizontal"
-    app:cardCornerRadius="10dp"
-    app:contentPadding="5dp">
+    android:layout_margin="10dp"
+    app:cardCornerRadius="20dp">
 
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"
-        android:scaleType="centerCrop"
-        android:layout_weight="1"
-        tools:srcCompat="@tools:sample/avatars"
-        android:id="@+id/imgAtracao"
-        />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:scaleType="centerCrop"
+            android:layout_weight="1"
+            tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imgAtracao"
+            />
 
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:background="@drawable/preto"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/preto"
+            android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/tvNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="10dp"
-        android:padding="2sp"
-        android:text="Nome"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:visibility="visible"/>
-
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvNome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginHorizontal="15dp"
+            android:layout_marginVertical="10dp"
+            android:padding="2sp"
+            android:text="Nome"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+    </RelativeLayout>
+</androidx.cardview.widget.CardView>
