--- a/Viaxar/app/src/main/res/layout/pais_fav.xml
+++ b/Viaxar/app/src/main/res/layout/pais_fav.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="5dp"
-    android:layout_marginVertical="10dp"
+    android:layout_marginVertical="5dp"
     android:background="#212121"
     android:orientation="horizontal">
 
@@ -14,8 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="2dp"
-        app:cardCornerRadius="15dp"
-        app:contentPadding="5dp">
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,19 +22,19 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:scaleType="centerCrop"
                 android:id="@+id/imgBack"
                 android:layout_width="83dp"
-                android:layout_height="87dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:paddingHorizontal="5dp"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:scaleType="centerCrop"
+                tools:srcCompat="@drawable/not_found" />
 
             <LinearLayout
                 android:id="@+id/linear"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:paddingLeft="12dp">
@@ -71,18 +70,20 @@
                     android:layout_width="45dp"
                     android:layout_height="42dp"
                     android:layout_gravity="right"
+                    android:layout_marginLeft="5dp"
                     android:layout_weight="1"
                     android:paddingTop="6dp"
                     android:paddingRight="6dp"
-                    app:srcCompat="@drawable/ic_menu_favorite"
-                    app:tint="@android:color/holo_red_light" />
+                    app:srcCompat="@drawable/sim_fav"
+                    app:tint="#FF4545" />
 
                 <ImageView
                     android:id="@+id/imgBandeira"
                     android:layout_width="45dp"
                     android:layout_height="50dp"
+                    android:layout_marginRight="5dp"
                     android:layout_weight="1"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:srcCompat="@drawable/not_found" />
 
             </LinearLayout>
         </LinearLayout>
